--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,19 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); 
   background-color: rgba(0, 0, 0, 0);
 }
+
+.loginForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.userInp {
+  padding: 13px;
+  outline: none;
+  border: 0cap;
+  border-radius: 5px;
+  width: 50%;
+  min-width: 180px;
+}
