--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;  
-  background-color: #242424;
+  /* background-color: #242424; */
+  background-image: url("/public/bootDev.png");
 
 }
 
@@ -23,12 +24,18 @@
 .main {
   width: 70%;
   height: 70%; 
-  background-color: rgb(68, 63, 63);
+  /* background-color: rgb(68, 63, 63); */
   padding: 20px;
   text-align: center;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3); 
   background-color: rgba(0, 0, 0, 0);
+  backdrop-filter: blur(10px); /* Applies blur to the background */
+  -webkit-backdrop-filter: blur(10px); /* For Safari support */
+  border: 1px solid rgba(255, 255, 255, 0.2); /* A slight border for more definition */
+  border-radius: 16px; /* Rounded corners */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2); /* Shadow to lift the element visually */
+ 
 }
 
 .loginForm {
@@ -38,6 +45,10 @@
   gap: 30px;
 }
 
+.loginForm h1 {
+  font-weight: bold;
+}
+
 .userInp {
   padding: 20px 13px;
   outline: none;
@@ -45,6 +56,7 @@
   border-radius: 5px;
   width: 50%;
   min-width: 180px;
+  font-size: 15px;
 }
 
 .loginSub {
