--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -139,6 +139,51 @@
 
 .Msger2 {
   height: 49vh;
+  overflow-y: scroll; 
+  scrollbar-width: none; 
+  -ms-overflow-style: none; 
+}
+
+.Msger2::-webkit-scrollbar {
+  display: none;
+}
+
+.Msger2Self {
+  background-color: rgb(21, 181, 235);
+  width: 70%;
+  float: right;
+  padding: 5px;
+  text-align: start;
+  border-radius: 8px;
+  margin-right: 10px;
+}
+
+.Msger2Other {
+  background-color: rgba(53, 53, 53, 0.6);
+  width: 70%;
+  padding: 5px;
+  text-align: start;
+  border-radius: 8px;
+  float: left;
+  margin-left: 10px;
+}
+
+.Msger2SelfImg {
+  width: 70%;
+  display: block;        
+  float: right;
+  margin-right: 10px;
+  border-radius: 8px;
+  text-align: right;
+}
+
+.Msger2OtherImg {
+  width: 70%;
+  display: block;        
+  float: left;
+  margin-left: 10px;
+  border-radius: 8px;
+  text-align: right;
 }
 
 .Msger3 {
@@ -318,4 +363,3 @@
   font-size: 15px;
   font-weight: bold;
 }
-
